fix icon alignment

--- a/src/components/Navbar/NavbarBody/NavbarBody.module.scss
+++ b/src/components/Navbar/NavbarBody/NavbarBody.module.scss
@@ -44,6 +44,7 @@
   align-self: center;
   justify-content: start;
   & > svg {
+    margin-block-start: 1px;
     height: var(--spacing-medium);
     width: auto;
     @include breakpoints.tablet {
